# rust-koan

./: .gitignore  Cargo.toml  Dockerfile  readme.md  run.sh
aws-lambda/lambda-demo/: .gitignore  Cargo.toml  build.sh  docker-compose.yaml  input.css  package.json  tailwind.config.js
aws-lambda/lambda-demo/infrastructure/: main.tf  provider.tf
aws-lambda/lambda-demo/src/: main.rs
aws-lambda/lambda-demo/templates/: about.html  base.html  home.html  support.html
aws-lambda/lambda-demo/templates/components/: form.html  readme.html
con_utils/: Cargo.toml
con_utils/src/: channel.rs
data_structure/: Cargo.toml
data_structure/src/: slice-str.rs  slice.rs
error_handling/: Cargo.toml
error_handling/closure/: Cargo.toml
error_handling/closure/src/: executor.rs  fnmut.rs  fnonce.rs  main.rs  size.rs
error_handling/src/: catch_unwind.rs
hash_table/: Cargo.toml
hash_table/src/: btreemap2.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml  build.rs
kv/examples/: client.rs  client_hmget.rs  compress.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_rocksdb.rs  server_with_sled.rs  service_trait_object.rs
kv/fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
kv/src/: client.rs  client_tls.rs  error.rs  server_tls.rs
kv/src/network/: frame.rs  mod.rs  tls.rs
kv/src/pb/: mod.rs
kv/src/service/: command_service.rs  mod.rs
kv/src/storage/: memory.rs  mod.rs  rockdb.rs  sleddb.rs
lifetime/: Cargo.toml
lifetime/examples/: get-first-word.rs  strtok.rs
lifetime/src/: main.rs
memory/: Cargo.toml
memory/src/: main.rs
ownership/: Cargo.toml
ownership/examples/: copy-drop-conflict.rs  lifetime.rs  local-ref.rs  multi-mut-ref.rs  multi-owner.rs  mut-read-ref-conflict.rs  ref-copy.rs
ownership/src/: main.rs
playground/: Cargo.toml  readme.md
playground/benches/: executor.rs  trait_object.rs
playground/examples/: alg_combination_arrangement.rs  alg_edit_distance.rs  alg_least_bills.rs  alg_rails.rs  atomic.rs  condvar.rs  future.rs  future1.rs  future2.rs  future3.rs  macro.rs  metrics.rs  minString.rs  p2p_chat.rs  phantomdata1.rs  phantomdata2.rs  rand.rs  raw_pointer.rs  rocket_server.rs  stream_server.rs
playground/src/: main.rs
queryer/: Cargo.toml
queryer/examples/: dialect.rs
queryer/query-js/: Cargo.toml  package.json
queryer/query-js/src/: lib.rs
queryer/query-py/: Cargo.toml
queryer/query-py/src/: lib.rs
queryer/queryer/: Cargo.toml
queryer/queryer/examples/: covid.rs
queryer/queryer/src/: convert.rs  lib.rs
queryer/src/: fetcher.rs  loader.rs
rgrep/: Cargo.toml
scrape_url/: Cargo.toml  Dockerfile  readme.md  run.sh
scrape_url/src/: main.rs
smart_pointers/: Cargo.toml
smart_pointers/src/: allocator.rs  cow.rs  mystring.rs
thumbor/: Cargo.toml
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: mod.rs
tokio-play/: Cargo.toml
tokio-play/examples/: async_backtrace.rs  cs.rs
tower-play/: Cargo.toml
tower-play/examples/: client.rs  server.rs  server_hyper_middleware.rs  server_tower_middleware.rs  tower_async.rs
traits/: Cargo.toml
traits/src/: add-generic.rs  buf-builder.rs  common.rs  list.rs  parse-generic.rs  parse.rs  sentence.rs  trait-object-vtable.rs  trait-object.rs
type_system/: Cargo.toml
type_system/src/: generic_fn.rs  writer.rs
