[package]
name = "data_structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "slice"
path = "src/slice.rs"

[[bin]]
name = "slice-str"
path = "src/slice-str.rs"

[[bin]]
name = "boxed"
path = "src/boxed.rs"

[[bin]]
name = "iter"
path = "src/iter.rs"

[dependencies]
