[package]
name = "hash_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "example"
path = "src/example.rs"

[[bin]]
name = "custom_key"
path = "src/custom_key.rs"

[[bin]]
name = "btreemap"
path = "src/btreemap.rs"

[[bin]]
name = "btreemap2"
path = "src/btreemap2.rs"

[dependencies]
