[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "3.1.6"
colored = "2.0.0"
jsonxf = "1.1.1"
mime = "0.3.16"
reqwest = { version = "0.11.6", default-features = false, features = ["json", "rustls-tls"] } # HTTP 客户端
tokio = { version = "1.15.0", features = ["full"] } # 异步处理库
syntect = "4"

[[bin]]
name = "app"
path = "src/main.rs"
