[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
dashmap = "5.3.4"
http = "0.2.8"
prost = "0.10.4"
rocksdb = { version = "0.18.0", features = ["multi-threaded-cf"] }
sled = "0.34.7"
thiserror = "1.0.31"
tracing = "0.1.35"

[dev-dependencies]
anyhow = "1.0.57"
async-prost = "0.4.0"
futures = "0.3.21"
tempfile = "3.3.0"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.3.11"

[build-dependencies]
prost-build = "0.10.4"
