[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[[bin]]
name = "kvs_tls"
path = "src/server_tls.rs"

[[bin]]
name = "kvc_tls"
path = "src/client_tls.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
dashmap = "5.3.4"
flate2 = "1.0.24"
http = "0.2.8"
prost = "0.10.4"
rocksdb = { version = "0.18.0", features = ["multi-threaded-cf"] }
sled = "0.34.7"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
anyhow = "1.0.57"
tracing-subscriber = "0.3.11"
certify = "0.4.0"
tokio-rustls = "0.22"
rustls-native-certs = "0.5"


[dev-dependencies]
async-prost = "0.4.0"
futures = "0.3.21"
tempfile = "3.3.0"
tokio-util = { version = "0.7.3", features = ["codec"] }

[build-dependencies]
prost-build = "0.12.4"
