[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "is-copy"

[[example]]
name = "copy-drop-conflict"

[[example]]
name = "local-ref"

[[example]]
name = "multi-mut-ref"

[[example]]
name = "mut-read-ref-conflict"

[[example]]
name = "ref-copy"

[[example]]
name = "multi-owner"

[[example]]
name = "DAG"

[[example]]
name = "lifetime"

[dependencies]
