[package]
name = "smart_pointers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "allocator"
path = "src/allocator.rs"

[[bin]]
name = "cow"
path = "src/cow.rs"

[[bin]]
name = "guard"
path = "src/guard.rs"

[[bin]]
name = "mystring"
path = "src/mystring.rs"

[dependencies]
url = "2"
serde = { version = "1",features = ["derive"] }
serde_json = "1"
rayon = "1"
lazy_static = "1"