[package]
name = "tokio-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-backtrace = "0.2.6"
console-subscriber = "0.2.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = "0.1.40"
